# dsa

./: .gitignore  CMakeLists.txt  README.md  iterator_performance_test.c  simple_sort_test.c
cmake/: dsaConfig.cmake.in
docs/: README.md  array_iterator_usage.md  array_list_api.md  deque_api.md  linked_list_api.md  linked_list_iterator_usage.md  performance.md  queue_api.md  stack_api.md
examples/: CMakeLists.txt  array_example.c  array_list_example.c  array_list_iterator_demo.c  array_list_iterator_example.c  array_stack_example.c  circular_array_deque_example.c  circular_array_queue_example.c  circular_linked_list_example.c  doubly_linked_deque_example.c  doubly_linked_list_example.c  doubly_linked_queue_example.c  dynamic_array_list_example.c  linked_list_example.c  linked_list_iterator_example.c  linked_stack_example.c  searching_example.c  singly_linked_list_example.c  sorting_example.c  static_array_list_example.c  test_main.c
include/: common.h
include/a/: iterator.h  searching.h  sorting.h
include/adt/: deque.h  queue.h  stack.h
include/ds/: array.h  array_list.h  array_list_iterator.h  iterator.h  linked_list.h  linked_list_iterator.h  sorting.h
include/dsa/: array.h  common.h  deque.h  dynamic_array.h  linked_list.h  stack.h  static_array.h
internal/: iterator_internal.h  traits.h
src/: CMakeLists.txt
src/array/: CMakeLists.txt  array.c  array_list.c  dynamic_array.c  static_array.c
src/array/internal/: array_base.h  array_list_traits.h  array_traits.h  dynamic_array.h  static_array.h
src/array_list/: CMakeLists.txt  array_iterator.c  array_list.c  dynamic_array.c  dynamic_array_list.c  static_array.c  static_array_list.c
src/array_list/internal/: array_iterator_internal.h  array_list_traits.h  dynamic_array_list.h  static_array_list.h
src/common/: CMakeLists.txt  iterator_operations.c
src/deque/: CMakeLists.txt  circular_array_deque.c  deque.c  doubly_linked_deque.c
src/deque/internal/: circular_array_deque.h  deque_traits.h  doubly_linked_deque.h
src/dynamic_array/: CMakeLists.txt  dynamic_array.c
src/iterator/: CMakeLists.txt  iterator_utils.c
src/iterator/internal/: iterator_internal.h
src/linked_list/: CMakeLists.txt  circular_linked_list.c  doubly_linked_list.c  linked_list.c  linked_list_iterator.c  single_linked.c  singly_linked.c  singly_linked_list.c
src/linked_list/internal/: circular_linked_list.h  doubly_linked_list.h  linked_list_iterator_internal.h  linked_list_traits.h  single_linked.h  singly_linked.h  singly_linked_list.h
src/queue/: CMakeLists.txt  circular_array_queue.c  doubly_linked_queue.c  queue.c
src/queue/internal/: circular_array_queue.h  doubly_linked_queue.h  queue_traits.h
src/searching/: CMakeLists.txt  searching.c
src/sorting/: CMakeLists.txt  insertion_sort.c  selection_sort.c  sorting_utils.c
src/stack/: CMakeLists.txt  array_stack.c  linked_stack.c  stack.c
src/stack/internal/: array_stack.h  linked_stack.h  stack_traits.h
tests/: CMakeLists.txt
tests/array/: CMakeLists.txt  test_array.c  test_dynamic_array.c  test_static_array.c
tests/array_list/: CMakeLists.txt  test_array_iterator.c  test_iterator_performance.c  test_static_array.c
tests/deque/: CMakeLists.txt  test_circular_array_deque.c  test_deque.c  test_doubly_linked_deque.c
tests/dynamic_array/: CMakeLists.txt  test_dynamic_array.c
tests/linked_list/: CMakeLists.txt  test_circular_linked_list.c  test_doubly_linked_list.c  test_linked_list.c  test_linked_list_iterator.c  test_singly_linked_list.c
tests/queue/: CMakeLists.txt  test_circular_array_queue.c  test_doubly_linked_queue.c  test_queue.c
tests/sorting/: CMakeLists.txt  test_insertion_sort.c  test_selection_sort.c  test_sorting_utils.c
tests/stack/: CMakeLists.txt  test_array_stack.c  test_linked_stack.c  test_stack.c
